--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,49 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+// This will remove iOS Header Line
+ion-toolbar {
+  --border-width: 0 !important;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+// Removing Android Header Line
+.header-md::after {
+  background: none !important;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+.container h1 {
+  margin-top: 0;
+}
 
-  color: #8c8c8c;
+.backbtn {
+  margin-left: 20px;
+}
 
+.form-container {
+  margin-top: 48px;
+}
+
+.form-container ion-item {
+  --padding-start: 0;
+  --border-color: #DADADA;
+}
+
+.form-container ion-item ion-label {
+  color: #A6A6A6;
+}
+
+.form-container ion-item ion-icon {
+  margin-top: auto;
+  color: #c6cbd4;
+}
+
+.form-container ion-button {
+  margin-top: 48px;
+}
+
+.sign-up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sign-up ion-button {
   margin: 0;
-}
-
-#container a {
-  text-decoration: none;
 }
