--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -10,23 +10,27 @@
 
 <ion-content class="ion-padding">
   <div class="ion-padding container">
-    <h1>Login</h1>
+    <h1>Signup</h1>
 
     <div class="form-container">
+      <ion-item>
+        <ion-label position="floating">Name</ion-label>
+        <ion-input [(ngModel)]="user.name"></ion-input>
+      </ion-item>
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input [(ngModel)]="user.email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Password</ion-label>
-        <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+        <ion-input type="password"[(ngModel)]="user.password"></ion-input>
         <ion-icon name="eye" slot="end"></ion-icon>
       </ion-item>
 
-      <ion-button expand="block" class="main-button" (click)="login()">Log in</ion-button>
+      <ion-button expand="block" class="main-button" (click)="regi()">Sign Up</ion-button>
 
       <div class="sign-up">
-        Don't have an account? <ion-button color="dark" fill="clear" routerLink="/signup" routerDirection="forward">Sign up</ion-button>
+        Already have an account? <ion-button color="dark" fill="clear" routerLink="/home" routerDirection="forward">Sign in</ion-button>
       </div>
     </div>
   </div>
